	-Support for images
-Added a menu
	-Transition between screens
	-New screen for Controls
	-Regular mode is now Survivor
	-From pause or death screen you can go back to menu
-Added random pause messages
-Added new death messages
-Added new type of enemy: suPerbALLs
-Added new easter-eggs
	-Added David Robert Jones mode
	-Added Italian mode
	-Added mode
	-Added Detective mode
-You can only use easter-eggs and devmode on survivor for now 
-Major changes on difficulty of Survivor mode OI
-Changes on text placement
	-New font for some texts
-Changes on focus
	-While on survivor mode you can't lose focus
	-While paused or anywhere else you can
-Changes on how score works
	-It counts how many points you've made
	-You no longer dies if you score hits 0
	-Saves your highscore
-Changes on color settings
	-Changes on "Lsd worn out" effect
	-Changes on color of "bullets"
-Fixed some sound control bugs
	-Muting when the song is weither fading in or fading out

*************************************************
(11/05/2013) Patch 0.8.0    -   UltraPatch
*************************************************

-Major change on the script
	-"Cleaner" code
	-More annotations
-Added "Ultrablast Charge"
-Added sound controller
	-You can press 'm' to mute the game
	-You can press ',' or '.' to decrease or increase the volume
	-Added images representing current sound level
-Added the logo
-Added slow-motion effect on death
-Added version checker
-Added devmode
-Added hidden easter-egg: "ghost mode"
	-Lets you know if there is a newer version available at the site
	-Timeouts if it doesn't get any info from the site after a set time
-You can't leave the screen anymore
-Explosion particles have the colour of their "origin"
-Changes on text placement
-More death messages
	-Getting "LSD worn out" effect is more difficult
	-Leaving "LSD worn out" effect is more common
-Changed 10x multiplier colour effect

*************************************************